HttpServer/deployments/kubernetes/istio/kubernetes-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: dotnetserver-gateway
spec:
  selector:
    istio: ingressgateway  # use Istio's default ingress gateway
  servers:
    - port: 
        number: 80
        name: http
        protocol: HTTP
      hosts:
          - "*"

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: dotnetserver
spec:
  hosts:
    - "*"
  gateways:
    - dotnetserver-gateway
  http:
    - route:
        - destination:
            host: dotnetserver
            port:
              number: 5001
